--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/ContainerTrait.vm
@@ -1,20 +1,5 @@
-#*
- * Licensed under the GNU LESSER GENERAL PUBLIC LICENSE, Version 3, 29 June 2007;
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * 	http://www.gnu.org/licenses/lgpl-3.0.txt
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- * Authors:
- * 	Fouquet Francois
- * 	Nain Gregory
- *#
+#* @vtlvariable name="formatedFactoryName" type="java.lang.String" *#
+#* @vtlvariable name="packElem" type="java.lang.String" *#
 
 package ${packElem}.impl
 
@@ -55,7 +40,5 @@ trait ${formatedFactoryName}Internal {
         internal_eContainer = container
         internal_unsetCmd = unsetCmd
     }
-
-    fun internalGetQuery(selfKey : String) : String? { return null }
 
 }
