Big update and refactoring for proper management of multi-packaged metamodels. Introduction of a MainFactory in a factory package. Renaming and move of <Package_Name>Container to a unique global KMFContainer (eg: KevoreeContainer -> KMFContainer)

--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerTrait.vm
@@ -1,9 +1,9 @@
 #* @vtlvariable name="formatedFactoryName" type="java.lang.String" *#
 #* @vtlvariable name="packElem" type="java.lang.String" *#
 
-package ${packElem}.impl
+package ${packElem}
 
-trait ${formatedFactoryName}Internal {
+trait ${formatedFactoryName}Impl {
 
     internal open var internal_eContainer : ${packElem}.${formatedFactoryName}?
     internal open var internal_unsetCmd : (()->Unit)?
