--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -2,6 +2,7 @@
 #* @vtlvariable name="formatedFactoryName" type="java.lang.String" *#
 #* @vtlvariable name="packElem" type="java.lang.String" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
+#* @vtlvariable name="FQNHelper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 
 package ${packElem};
 
@@ -26,10 +27,10 @@ fun findByPath(query : String) : Any?
 fun path() : String?
 
 #if(${ctx.jS})
-    fun getClonelazy(subResult : java.util.HashMap<Any,Any>, _factories : ${ctx.clonerPackage}.ClonerFactories, mutableOnly: Boolean)
+    fun getClonelazy(subResult : java.util.HashMap<Any,Any>, _factories : ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory, mutableOnly: Boolean)
     fun resolve(addrs : java.util.HashMap<Any,Any>,readOnly:Boolean, mutableOnly: Boolean) : Any
 #else
-    fun getClonelazy(subResult : java.util.IdentityHashMap<Any,Any>, _factories : ${ctx.clonerPackage}.ClonerFactories, mutableOnly: Boolean)
+    fun getClonelazy(subResult : java.util.IdentityHashMap<Any,Any>, _factories : ${FQNHelper.fqn($ctx, ${ctx.getBasePackageForUtilitiesGeneration()})}.factory.MainFactory, mutableOnly: Boolean)
     fun resolve(addrs : java.util.IdentityHashMap<Any,Any>,readOnly:Boolean, mutableOnly: Boolean) : Any
 #end
 
