--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/JSONLoader.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/JSONLoader.vm
@@ -2,30 +2,31 @@
 #* @vtlvariable name="helper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelperClass" *#
 #* @vtlvariable name="rootElement" type="org.eclipse.emf.ecore.EClass" *#
 #* @vtlvariable name="elemToLoad" type="org.eclipse.emf.ecore.EClass" *#
-package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader;
+package ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader
 
 import java.io.File
 import java.io.FileReader
 import java.io.FileInputStream
+import java.io.InputStream
 import java.io.Reader
 import java.io.StringReader
 import java.io.InputStreamReader
 import com.google.gson.stream.JsonReader
 import com.google.gson.stream.JsonToken
 
-class JSONModelLoader {
+class JSONModelLoader : ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.loader.ModelLoader {
 
     val mainFactory = ${helper.fqn($ctx, $ctx.getBasePackageForUtilitiesGeneration())}.factory.MainFactory()
 
-    fun loadModelFromString(str: String) : List<${helper.fqn($ctx,$rootElement)}>? {
+    override fun loadModelFromString(str: String) : List<${helper.fqn($ctx,$rootElement)}>? {
         return deserialize(StringReader(str))
     }
 
-    fun loadModelFromPath(file: File) : List<${helper.fqn($ctx,$rootElement)}>? {
+    override fun loadModelFromPath(file: File) : List<${helper.fqn($ctx,$rootElement)}>? {
         return loadModelFromStream(FileInputStream(file))
     }
 
-    fun loadModelFromStream(inputStream: FileInputStream) : List<${helper.fqn($ctx,$rootElement)}>? {
+    override fun loadModelFromStream(inputStream: InputStream) : List<${helper.fqn($ctx,$rootElement)}>? {
         return deserialize(InputStreamReader(inputStream))
     }
 
@@ -52,6 +53,39 @@ class JSONModelLoader {
         }
         for(res in context.resolvers) {res()}
         return context.loaded_$rootElement.getName().substring(0,1).toLowerCase()$rootElement.getName().substring(1)
+    }
+
+    private fun unescapeJSON(src : String) : String {
+        var builder : StringBuilder? = null
+        var i : Int = 0
+        while (i < src.length) {
+            val c = src[i]
+            if(c == '&') {
+                if(builder == null) {
+                    builder = StringBuilder(src.substring(0,i))
+                }
+                if(src[i+1]=='a') {
+                    builder?.append("'")
+                    i = i+6
+                } else if(src[i+1]=='q') {
+                    builder?.append("\"")
+                    i = i+6
+                } else {
+                    System.err.println("Could not unescaped chain:" + src[i] + src[i+1])
+                }
+            } else {
+                if(builder != null) {
+                    builder?.append(c)
+                }
+                i++
+            }
+        }
+
+        if(builder != null) {
+            return builder.toString()
+        } else {
+            return src
+        }
     }
 
 #generateLoadMethod($rootElement)
@@ -83,7 +117,7 @@ class JSONModelLoader {
                 #elseif($helper.convertType($att.getEAttributeType()).equals("Long"))
                 "$att.getName()" -> {modelElem.$methName(reader.nextLong())}
                 #else
-                "$att.getName()" -> {modelElem.$methName(reader.nextString()!!)}
+                "$att.getName()" -> {modelElem.$methName(unescapeJSON(reader.nextString()!!))}
                 #end
             #end
             #foreach($ref in $elemToLoad.getEAllReferences())
