--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/FlyWeightFactory.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/FlyWeightFactory.vm
@@ -16,15 +16,18 @@ private var maxStack : Int = 1000
 
 fun setMaxStackSize(s : Int){
 maxStack = s
+#foreach( $class in $classes )
+stack${class.getName()}.ensureCapacity(s)
+#end
 }
 
 override fun getVersion() : String { return "${modelVersion}" }
 
 #foreach( $class in $classes )
-val stack${class.getName()} = java.util.Stack<${class.getName()}>()
+val stack${class.getName()} = java.util.ArrayList<${class.getName()}>()
 override fun create${class.getName()}() : ${class.getName()} {
-if(!stack${class.getName()}.empty()){
-return stack${class.getName()}.pop()!!
+if(!stack${class.getName()}.isEmpty()){
+    return stack${class.getName()}.remove(0)!!
 }
 return ${class.getName()}Impl()
 }
@@ -35,7 +38,7 @@ when(obj){
 #foreach( $class in $classes )
 is ${class.getName()} -> {
 if(maxStack < stack${class.getName()}.size()){
-stack${class.getName()}.push(obj as ${class.getName()})
+stack${class.getName()}.add(obj as ${class.getName()})
 }
 val ${class.getName()}_subs = (obj as ${class.getName()}).selectByQuery("contained[*]")
 for(subClass in ${class.getName()}_subs){
