--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerEscapeJSON.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerEscapeJSON.vm
@@ -1,6 +1,6 @@
 
 private fun escapeJson(ostream : java.io.PrintStream, chain : String) {
-    for( c in chain.toCharArray()) {
+    for( c in chain) {
         if(c == '"') {
             ostream.print("&quot;")
         } else if(c == '\'') {
