--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/ContainerAPI.vm
@@ -15,6 +15,8 @@ fun isRecursiveReadOnly() : Boolean
 fun setInternalReadOnly()
 fun delete()
 
+fun modelEquals(similarObj : Any?) : Boolean
+
 #if(${ctx.genSelector})
     fun selectByQuery(query : String) : List<Any>
 #end
