--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/EqualsMethod.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/EqualsMethod.vm
@@ -2,8 +2,7 @@
 #* @vtlvariable name="FQNHelper" type="org.kevoree.modeling.kotlin.generator.ProcessorHelper" *#
 #* @vtlvariable name="ctx" type="org.kevoree.modeling.kotlin.generator.GenerationContext" *#
 
-#if(!${currentClass.getEAllSuperTypes().isEmpty()})
-override #end fun equals(similarObj : Any?) : Boolean {
+override fun modelEquals(similarObj : Any?) : Boolean {
     if(similarObj == null || !(similarObj is ${FQNHelper.fqn($ctx, $currentClass)})){
         return false
     }
