--- a/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerEscapeJSON.vm
+++ b/org.kevoree.modeling.kotlin.generator/src/main/resources/templates/SerializerEscapeJSON.vm
@@ -1,6 +1,8 @@
 
 private fun escapeJson(ostream : java.io.PrintStream, chain : String) {
-    for( c in chain) {
+    var i = 0
+    while(i < chain.size){
+        val c = chain.get(i)
         if(c == '"') {
             ostream.print("&quot;")
         } else if(c == '\'') {
@@ -8,5 +10,6 @@ private fun escapeJson(ostream : java.io.PrintStream, chain : String) {
         } else {
             ostream.print(c)
         }
+        i = i + 1
     }
 }
